objects/Mail__c/Mail__c.object-meta.xml
<CustomObject>
    <description>Mail handled by mail driver</description>
    <label>Mail</label>
    <nameField>
        <label>Mail Addressee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>