objects/Mail__c/fields/Addressee_Address__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Address__c</fullName>
    <description>Where is the addressee&#39;s address</description>
    <inlineHelpText>Type in your address</inlineHelpText>
    <label>Addressee Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>