objects/Mail__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Delivery statuses of mail</description>
    <inlineHelpText>status delivery of mail</inlineHelpText>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status: Delivered</fullName>
            </value>
            <value>
                <fullName>Status: Undelivered-Reattempt will be made</fullName>
            </value>
            <value>
                <fullName>Status: Undelivered-Max Attempts-Return to Sender</fullName>
            </value>
            <value>
                <fullName>Status: Undeliverable-Vacant Home</fullName>
                <isActive>false</isActive>
                <label>Status: Undeliverable-Vacant Home</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>