objects/Mail__c/fields/Fragile__c.field-meta.xml
<CustomField>
    <fullName>Fragile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the package fragile?</description>
    <inlineHelpText>checks if the package is fragile</inlineHelpText>
    <label>Fragile</label>
    <type>Checkbox</type>
</CustomField>