objects/Mail__c/fields/Has_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Has_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>does the package have insurance?</description>
    <inlineHelpText>Does the package have insurance?</inlineHelpText>
    <label>Has Insurance?</label>
    <type>Checkbox</type>
</CustomField>