objects/Mail__c/fields/How_much_is_the_package_insured_for__c.field-meta.xml
<CustomField>
    <fullName>How_much_is_the_package_insured_for__c</fullName>
    <description>How much is the package insured for?</description>
    <label>How much is the package insured for?</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>