objects/Mail__c/fields/Missing_Lost__c.field-meta.xml
<CustomField>
    <fullName>Missing_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is package missing or lost</description>
    <inlineHelpText>Is package missing or lost?</inlineHelpText>
    <label>Missing/Lost</label>
    <type>Checkbox</type>
</CustomField>