objects/Mail__c/fields/Package_Height__c.field-meta.xml
<CustomField>
    <fullName>Package_Height__c</fullName>
    <description>How tall is the package?</description>
    <inlineHelpText>checks the height of the package</inlineHelpText>
    <label>Package Height</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>