objects/Mail__c/fields/Package_Weight__c.field-meta.xml
<CustomField>
    <fullName>Package_Weight__c</fullName>
    <description>How heavy is the package</description>
    <inlineHelpText>check the weight of the  package</inlineHelpText>
    <label>Package Weight</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>