objects/Mail__c/fields/Package_Width__c.field-meta.xml
<CustomField>
    <fullName>Package_Width__c</fullName>
    <description>How wide is the package?</description>
    <inlineHelpText>check package width</inlineHelpText>
    <label>Package Width</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>